new client message gen

--- a/buildSrc/templates/EnginePlugin/src/atavism/agis/plugins/{{pluginCamelCase}}Client.java.hbs
+++ b/buildSrc/templates/EnginePlugin/src/atavism/agis/plugins/{{pluginCamelCase}}Client.java.hbs
@@ -3,7 +3,7 @@ package atavism.agis.plugins;
 import java.io.IOException;
 import java.io.Serializable;
 
-import atavism.msgsys.GenericMessage;
+import atavism.server.plugins.WorldManagerClient.ExtensionMessage;
 import atavism.msgsys.MessageType;
 import atavism.server.util.*;
 import atavism.server.engine.*;
