--- a/buildSrc/templates/EnginePlugin/src/atavism/agis/plugins/{{pluginCamelCase}}Plugin.java.hbs
+++ b/buildSrc/templates/EnginePlugin/src/atavism/agis/plugins/{{pluginCamelCase}}Plugin.java.hbs
@@ -9,6 +9,7 @@ import atavism.server.engine.Namespace;
 import atavism.server.engine.OID;
 import atavism.server.objects.Entity;
 import atavism.server.util.Logger;
+import atavism.server.plugins.WorldManagerClient.ExtensionMessage;
 
 public class {{pluginCamelCase}}Plugin extends EnginePlugin {
 	public {{pluginCamelCase}}Plugin() {
