new message generator

--- a/buildSrc/templates/EnginePlugin/register.py.hbs
+++ b/buildSrc/templates/EnginePlugin/register.py.hbs
@@ -9,4 +9,4 @@ from atavism.server.engine import *
 from atavism.server.util import *
 from atavism.server.plugins import *
 
-Engine.registerPlugin("atavism.agis.plugins.{{pluginCamelCase}}");
+Engine.registerPlugin("atavism.agis.plugins.{{pluginCamelCase}}Plugin");
